Published set to false

--- a/content/blog/part-2-batch-gradient-descent/index.mdx
+++ b/content/blog/part-2-batch-gradient-descent/index.mdx
@@ -2,7 +2,7 @@
 title: 'Part 2: Batch Gradient Descent'
 type: 'blog'
 date: 2021-12-18
-published: true
+published: false
 description: 'Batch Gradient Descent implementations with Linear Regression'
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
