linear algebra blog taken down

--- a/content/blog/overview-of-linear-algebra/index.mdx
+++ b/content/blog/overview-of-linear-algebra/index.mdx
@@ -2,7 +2,7 @@
 title: Overview of Linear Algebra
 type: 'blog'
 date: 2021-05-10
-published: true
+published: false
 description: 'A brief overview over topics covered in Linear Algebra text book written by Stephen H. Friendberg'
 tags: ['Linear Algebra', 'Mathematics']
 ---
