gd kaggle link added

--- a/content/blog/part-1-gradient-descent/index.mdx
+++ b/content/blog/part-1-gradient-descent/index.mdx
@@ -11,8 +11,12 @@ import { Link } from 'gatsby';
 
 This is part 1 of the series on Gradient Descent.
 
-- <Link to="/blog/part-2-batch-gradient-descent">Part 2: Batch Gradient Descent</Link>
-- <Link to="/blog/part-3-stochastic-gradient-descent">Part 3: Stochastic Gradient Descent</Link>
+- <Link to="/blog/part-2-batch-gradient-descent">
+    Part 2: Batch Gradient Descent
+  </Link>
+- <Link to="/blog/part-3-stochastic-gradient-descent">
+    Part 3: Stochastic Gradient Descent
+  </Link>
 
 There are several equations that we need to familiar with before working on these implementations.
 
@@ -266,3 +270,5 @@ Combining everything, here is how the regression line changes over time.
 Let's animate the movement of the regression lines.
 
 ![Regression line animation](./gd.gif)
+
+For more details, [click here](https://www.kaggle.com/bijonsetyawan/part-1-gradient-descent) to check the notebook on Kaggle.
