unnecessary codes removed

--- a/content/blog/part-1-gradient-descent/index.mdx
+++ b/content/blog/part-1-gradient-descent/index.mdx
@@ -68,11 +68,7 @@ where
 Let's simplify the partial derivation in the equation above
 
 $$
-    \frac{\partial}{\partial \Theta_i} J(\Theta_0, \Theta_1)
-$$
-
-$$
-    \frac{\partial}{\partial \Theta_i} \frac{1}{2N} \sum_{i=1}^N (\hat{y}_i - y_i)^2
+    \frac{\partial}{\partial \Theta_i} J(\Theta_0, \Theta_1) = \frac{\partial}{\partial \Theta_i} \frac{1}{2N} \sum_{i=1}^N (\hat{y}_i - y_i)^2
 $$
 
 Solving the partial derivation above, we then have
@@ -143,42 +139,7 @@ print(f"Linear Regression's MSE is {lr_mse}")
 # Linear Regression's MSE is 0.19101500769427357
 ```
 
-Before we start working on Gradient Descent, we need the following three functions.
-
-```python:title=helper-functions
-def predict(intercept, coefficient, dataset):
-    return np.array([intercept + coefficient * x for x in dataset])
-
-def sum_err_graph(algorithm, df, iterations):
-    plt.figure(figsize=(6,5))
-    plt.plot(np.arange(0, iterations), df['sum_error'][:iterations], color = 'r')
-    plt.title(f'{algorithm} Cost Function Over {iterations} Iterations')
-    plt.legend(["cost funtion"])
-
-def scatter_plot_with_regression_line(gd_intercept, gd_coefficient):
-    plt.figure(figsize=(6,5))
-    sns.scatterplot(
-        x = sepal_length,
-        y = petal_width,
-        hue = species_names
-    )
-    plt.plot(
-        sepal_length,
-        gd_intercept + gd_coefficient * sepal_length,
-        color = 'r'
-    )
-    plt.title(f"intercept = {gd_intercept:.2f} and coefficient = {gd_coefficient:.2f}")
-
-def calculate_mse(algorithm, gd_intercept, gd_coefficient):
-    gd_predictions = [gd_intercept + gd_coefficient * x for x in sepal_length]
-    gd_mse = mean_squared_error(
-        gd_predictions,
-        petal_width
-    )
-    print(f"The {algorithm}'s MSE is {gd_mse}")
-```
-
-# 1. Gradient Descent
+# Gradient Descent
 
 $$
     \Theta_{i} = \Theta_i - \frac{\alpha}{N} \sum^{N}_{i=1} (\hat{y}_i - y_i) \cdot x_i
@@ -226,7 +187,7 @@ gd_loss = gd(sepal_length, petal_width, epochs = 10000, df = gd_loss)
 
 Let's see how the regression lines tend to look like at the 1000th, the 5000th, and the 1000th iterations.
 
-## 1.1 GD 1000 Iterations
+# 1000 Iterations
 
 ```python:title=1000-iter-gd
 epoch = 1000
@@ -245,7 +206,7 @@ sum_err_graph('GD', gd_loss, epoch)
 
 With over 1000 iterations, the MSE value is `0.3309592484431454`
 
-## 1.2 GD 5000 Iterations
+# 5000 Iterations
 
 ![Regression line with 1000 of GD](./scatter-5000.png)
 
@@ -253,7 +214,7 @@ With over 1000 iterations, the MSE value is `0.3309592484431454`
 
 The MSE value is `0.2215636705284282`.
 
-## 1.3 GD 10000 Iterations
+# 10000 Iterations
 
 ![Regression line with 1000 of GD](./scatter-10000.png)
 
