--- a/content/blog/part-1-gradient-descent/index.mdx
+++ b/content/blog/part-1-gradient-descent/index.mdx
@@ -18,11 +18,11 @@ This is part 1 of the series on Gradient Descent.
     Part 3: Stochastic Gradient Descent
   </Link>
 
-There are several equations that we need to familiar with before working on these implementations.
+There are several equations that we need to familiar with before working on these implementations, namely: **Mean Squared Error**, **the regression line equation**, and **the weight update equation**.
 
-Let $y$ be the actual target, or label, and $\hat{y}$ be the prediction target.
-
-First, it's Mean Squared Error, or MSE, which is the cost function we are going to minimize.
+First, it's Mean Squared Error, or MSE, which is the cost function we are going to minimize. 
+Let $y$ be the actual label, and $\hat{y}$ be the prediction label. 
+Then,
 
 $$
     \text{MSE} = \frac{1}{N} \sum_{i=1}^N (\hat{y}_i - y_i)^2
@@ -87,7 +87,7 @@ After getting ourselves familiar with these 3 things, let's delve right into the
 Before we start with the implemetations, we should first import the dataset from `sklearn`.
 In this project, we will be working with the iris dataset.
 
-```python:title=data-preparation
+```python:title=main.py
 from sklearn import datasets
 
 iris = datasets.load_iris()
@@ -110,7 +110,7 @@ for i in target:
 
 First, let's fit our dataset to `LinearRegression()` model that we imported from `sklearn.linear_model`.
 
-```python:title=visualize-scikit-lr-results
+```python:title=main.py
 reg = LinearRegression().fit(X = sepal_length.reshape(-1,1), y = petal_width.reshape(-1,1))
 
 sns.scatterplot(x = sepal_length, y = petal_width, hue = species_names)
@@ -129,7 +129,7 @@ Once we have done fitting, or training, we then visualize the result.
 Let's see the intercept and the coefficient that `LinearRegression()` produced from our dataset.
 We are also want to see how much the MSE is, so let's print that as well.
 
-```python:title=intercept-coefficient-and-mse
+```python:title=main.py
 print(reg.intercept_, reg.coefficient_)
 # [-3.200215] [[0.75291757]]
 
@@ -162,7 +162,7 @@ $$
 
 Converting those two equations above to python code, we then have
 
-```python:title=gradient-descent
+```python
 def gd(x, y, epochs, df, alpha = 0.01):
     length = len(x)
     intercept, coefficient = 0.0, 0.0
@@ -180,7 +180,7 @@ def gd(x, y, epochs, df, alpha = 0.01):
 
 Then we create a dataframe to store the result and run the `gd()` function for over 10000 times.
 
-```python:title=gd-10000-iterations
+```python
 gd_loss = pd.DataFrame(columns=['intercept', 'coefficient', 'sum_error'])
 gd_loss = gd(sepal_length, petal_width, epochs = 10000, df = gd_loss)
 ```
@@ -189,7 +189,7 @@ Let's see how the regression lines tend to look like at the 1000th, the 5000th, 
 
 # 1000 Iterations
 
-```python:title=1000-iter-gd
+```python
 epoch = 1000
 calculate_mse(
     'GD',
