--- a/content/blog/part-2-batch-gradient-descent/index.mdx
+++ b/content/blog/part-2-batch-gradient-descent/index.mdx
@@ -14,6 +14,4 @@ This is part 2 of the series on Gradient Descent.
 - <Link to="/blog/part-1-gradient-descent">Part 1: Gradient Descent</Link>
 - <Link to="/blog/part-3-stochastic-gradient-descent">Part 3: Stochastic Gradient Descent</Link>
 
-`code block 1` and `code block 2`
-
->lorem ipsum dolor sit amet, consectetur adip eu non, sed do eiusmod tempor incididunt ut lab et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+>lorem ipsum dolor sit amet, consectetur adip eu non, sed do eiusmod tempor incididunt ut lab et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupi
