--- a/content/blog/part-2-batch-gradient-descent/index.mdx
+++ b/content/blog/part-2-batch-gradient-descent/index.mdx
@@ -2,7 +2,7 @@
 title: 'Part 2: Batch Gradient Descent'
 type: 'blog'
 date: 2021-12-18
-published: false
+published: true
 description: 'Batch Gradient Descent implementations with Linear Regression'
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
@@ -14,4 +14,5 @@ This is part 2 of the series on Gradient Descent.
 - <Link to="/blog/part-1-gradient-descent">Part 1: Gradient Descent</Link>
 - <Link to="/blog/part-3-stochastic-gradient-descent">Part 3: Stochastic Gradient Descent</Link>
 
->lorem ipsum dolor sit amet, consectetur adip eu non, sed do eiusmod tempor incididunt ut lab et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupi
+Pretty much of the code we are going to use are basically the same like in <Link to="/blog/part-1-gradient-descent">Part 1: Gradient Descent</Link>.
+We have to configure the `python:gd()` function so it can update the parameters, namely the intercept and the first coefficient, after some considerable amount of data are seen.
