code coloring and margin issues resolved

--- a/content/blog/part-2-batch-gradient-descent/index.mdx
+++ b/content/blog/part-2-batch-gradient-descent/index.mdx
@@ -16,3 +16,8 @@ This is part 2 of the series on Gradient Descent.
 
 Pretty much of the code we are going to use are basically the same like in <Link to="/blog/part-1-gradient-descent">Part 1: Gradient Descent</Link>.
 We have to configure the `python:gd()` function so it can update the parameters, namely the intercept and the first coefficient, after some considerable amount of data are seen.
+
+```python {1-2,numberLines}
+print("This")
+print("That")
+```
