taglist flex issues resolved

--- a/content/blog/part-1-gradient-descent/index.mdx
+++ b/content/blog/part-1-gradient-descent/index.mdx
@@ -4,7 +4,7 @@ type: 'blog'
 date: 2021-12-16
 published: true
 description: 'Gradient Descent implementations with Linear Regression'
-tags: ['Machine Learning', 'Optimization', 'Python']
+tags: ['Python', 'Optimization', 'Machine Learning']
 ---
 
 import { Link } from 'gatsby';
