class name added back

--- a/content/portfolio/my-personal-website/index.mdx
+++ b/content/portfolio/my-personal-website/index.mdx
@@ -30,6 +30,6 @@ Thus, I spent a significant amount of time on how to create a user-friendly webs
 
 My personal website is the result of the aforementioned principles, and it will act as a medium where I can showcase my work and share my knowledge.
 
-[Click here](https://github.com/nathansetyawan96/bsraya.com) to be redirected to this project's repo.
+[Click here](https://github.com/nathansetyawan96/bsraya.com) to see the source code.
 
 Tools: React.js, Gatsby.js, and GraphQL.js
