--- a/content/blog/what-is-the-best-learning-rate/main.mdx
+++ b/content/blog/what-is-the-best-learning-rate/main.mdx
@@ -2,7 +2,7 @@
 title: What is the Best Learning Rate?
 type: 'blog'
 date: 2022-02-05
-published: true
+published: false
 description: 'Is the bigger learning rate better? What is the best learning rate for your model?'
 tags: ['Python', 'Optimization', 'Sampling']
 ---
