--- a/content/portfolio/moore-hodgson-algorithm/main.mdx
+++ b/content/portfolio/moore-hodgson-algorithm/main.mdx
@@ -1,7 +1,7 @@
 ---
 title: Moore-Hodgson Algorithm
 type: 'blog'
-date: 2022-02-10
+date: 2022-02-02
 published: true
 description: 'An attempt to minimize the number of late jobs in a single machine.'
 tags: ['Golang', 'Scheduling']
@@ -22,7 +22,7 @@ of late jobs given we have too many things to do.
 That algorithm reminds me of my experience in the undergraduate program where most students procrastinate
 and pill up the work near the due dates. 
 
-I realized the algorithm was not complicated, and I gave it a try to implement it __golang__. 
+I realized the algorithm was not complicated, and I gave it a try to implement it in __golang__. 
 
 Before we get started, you should know that this implementation is based on 
 [one of the slides](https://www.win.tue.nl/~wscor/OW/2P450/MooreHodgson.pdf) provided 
