--- a/content/portfolio/my-personal-website/index.mdx
+++ b/content/portfolio/my-personal-website/index.mdx
@@ -4,7 +4,7 @@ type: 'portfolio'
 date: 2021-04-19
 published: true
 description: 'A portfolio website made with Gatsby.js'
-tags: ['Web Development', 'React']
+tags: ['Front-End', 'React', 'Web Development']
 ---
 
 I made this website from scratch using a React-based, GraphQL powered, static site generator called [Gatsby.js](https://www.gatsbyjs.com).
