b&b post title and description rephreased

--- a/content/portfolio/branch-and-bound-algorithm/main.mdx
+++ b/content/portfolio/branch-and-bound-algorithm/main.mdx
@@ -1,9 +1,9 @@
 ---
-title: Branch-and-Bound
+title: Branch-and-Bound Algorithm
 type: 'blog'
 date: 2022-02-10
 published: true
-description: 'A better and efficient way to schedule jobs'
+description: 'Another efficient algorithm for job scheduling'
 tags: ['Golang', 'Scheduling']
 ---
 
